--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -83,8 +83,29 @@ $fieldSize: 25;
 }
 
 .end {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     font-family: sans-serif;
     color: whitesmoke;
     text-align: center;
     font-size: 30px;
+
+    margin: 25px;
+    gap: 10px;
+
+    button {
+        background-color: gray;
+        padding: 10px;
+        font-family: sans-serif;
+        color: whitesmoke;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: darkgray;
+    }
 }
